[package]
name = "blackjack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "blackjack_sim"
path = "src/main.rs"

[workspace]
members = ["src/game"]

[dependencies]
game = { path = "src/game" }

rand = "0.8.5"
rand_chacha = "0.3.1"
